--- a/assets/css/boot.css
+++ b/assets/css/boot.css
@@ -292,3 +292,12 @@ nav .logo h1 {
   font-weight: bold;
   font-family: sans-serif;
 }
+
+/*Gallery*/
+.gallery {
+  margin-top: 30px;
+}
+/*End Gallery*/
+/**/
+/**/
+/**/
